# python-api-starter

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
docker/dev/: Dockerfile
src/app/: api.py  config.py  exception_handlers.py  main.py
src/app/tasks/: models.py  router.py  schemas.py  services.py
stack/cfn/: api.yaml
tests/app/: conftest.py  test_app.py  test_config.py  test_exception_handlers.py
tests/app/tasks/: test_router.py  test_services.py
