[tool.poetry]
name = "python-api-starter"
version = "0.1.0"
description = ""
authors = ["Cameron Xie"]
readme = "README.md"
packages = [
    { include = "app", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.2"
mangum = "^0.17.0"
pydantic-settings = "^2.2.1"
pynamodb = "^6.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.2"
mypy = "^1.10.0"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
moto = "^5.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -s -x -v --cov=src"
testpaths = ["tests"]
filterwarnings = [
    "error",
    # https://github.com/boto/boto3/issues/3889
    "ignore::DeprecationWarning:botocore[.*]",
]

[tool.ruff]
src = ["src"]
line-length = 120
fix = true
unsafe-fixes = true

[tool.ruff.lint]
select = [
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "D", # pydocstyle
    "ERA", # flake8-eradicate/eradicate
    "F", # Pyflakes
    "I", # isort
    "N", # pep8-naming
    "PGH", # pygrep
    "PIE", # flake8-pie
    "PL", # Pylint
    "RUF", # ruff checks
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "UP", # pyupgrade
]
ignore = [
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "D107",   # Missing docstring in `__init__`
    "D211",   # No blank lines allowed before class docstring
    "D213",   # Multi-line docstring summary should start at the second line
    "TID252", # Prefer absolute imports over relative imports from parent modules
]

[tool.mypy]
mypy_path = "./src"
exclude = ["tests", "dist"]
strict = true
show_error_codes = true
pretty = true
local_partial_types = true
warn_unreachable = true
